<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="after_reinstall_message">Все файлы успешно удалены. Вбивайте игровой ник и жмите играть.</string>
    <string name="app_name">BLACK RUSSIA | BY UGHUR</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_know">А знаете ли вы, что?</string>
    <string name="authorization">Авторизация</string>
    <string name="back">Назад</string>
    <string name="balance">Баланс: %1$s руб.</string>
    <string name="banner_body_text_1">Выполняйте задания, прокачивайте &lt;font color=#FFB001&gt;BLACK PASS&lt;/font&gt;, и получайте уникальные награды за проведенное время в игре. Чем выше уровень &lt;font color=#FFB001&gt;BLACK PASS&lt;/font&gt;, тем ценнее награды!</string>
    <string name="banner_body_text_2">Купите &lt;font color=#FFB001&gt;BLACK PASS PREMIUM DELUXE&lt;/font&gt; и получайте&lt;br&gt;самые ценные и эксклюзивные награды из ленты!</string>
    <string name="banner_button_show_prices">Смотреть</string>
    <string name="banner_title_prize_1">10 открытых\nуровней</string>
    <string name="banner_title_prize_2">VIP PLATINUM\nна 23 дня</string>
    <string name="banner_title_prize_3">Мотоцикл\nУрал</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bp_act_st1">Пакет Premium</string>
    <string name="button_expel">выгнать</string>
    <string name="button_go">перейти</string>
    <string name="button_start">начать</string>
    <string name="button_upgrade">улучшить</string>
    <string name="cancel">Отмена</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_updates">Проверка обновлений…</string>
    <string name="chip_text">Chip text</string>
    <string name="chooseServer">Выберите сервер</string>
    <string name="choose_server">Выбор сервера</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="res_0x7f12003e_com_crashlytics_android_build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="congratulation_you_are_win">Поздравляем! Вы выиграли:</string>
    <string name="content_description_icon">icon</string>
    <string name="data">Данные</string>
    <string name="define_roundedimageview" />
    <string name="deposit">Пополнить счет</string>
    <string name="dialog_join_from_launcher_msg">Вам необходимо зайти в игру используя лаунчер</string>
    <string name="dialog_join_from_launcher_ok">Принять</string>
    <string name="dinner_dialog_button_title_text">Купить</string>
    <string name="dinner_dialog_currency_price_sum">рублей</string>
    <string name="dinner_dialog_product_cheburek">Чебурек</string>
    <string name="dinner_dialog_product_coffee">Кофе</string>
    <string name="dinner_dialog_product_hotdog">Хот-дог</string>
    <string name="dinner_dialog_product_pie">Пирожок</string>
    <string name="dinner_dialog_product_sausage">Сосиска в тесте</string>
    <string name="dinner_dialog_product_tea">Чай</string>
    <string name="dinner_dialog_title_food_price">Стоимость:</string>
    <string name="dinner_dialog_title_food_satiety">Сытость:</string>
    <string name="dinner_dialog_title_name_dialog">Меню ларька</string>
    <string name="dinner_dialog_title_price_if_not_money">Недостаточно средств на Вашем счету</string>
    <string name="dinner_dialog_title_price_if_null_sum">Выберите продукты для покупки</string>
    <string name="dinner_dialog_title_price_sum">Общая стоимость:</string>
    <string name="donate">Донат</string>
    <string name="donate_all_licenses">Покупка всех лицензий</string>
    <string name="donate_all_licenses_sum">150 рублей</string>
    <string name="donate_family_name">Изменить название семьи</string>
    <string name="donate_family_name_sum">100 рублей</string>
    <string name="donate_gold_vip">Gold VIP</string>
    <string name="donate_gold_vip_sum">650 рублей</string>
    <string name="donate_per_month">в месяц</string>
    <string name="donate_platinum_vip">Platinum VIP</string>
    <string name="donate_platinum_vip_sum">1000 рублей</string>
    <string name="donate_power">Покупка силы</string>
    <string name="donate_power_sum">300 рублей</string>
    <string name="donate_silver_vip">Silver VIP</string>
    <string name="donate_silver_vip_sum">300 рублей</string>
    <string name="donate_slot_auto">Увеличение слотов для авто</string>
    <string name="donate_slot_auto_sum">100 рублей</string>
    <string name="donate_transfer_family">Передача семьи игроку</string>
    <string name="donate_transfer_family_sum">100 рублей</string>
    <string name="donate_warning">Снятие одного предупреждения</string>
    <string name="donate_warning_sum">100 рублей</string>
    <string name="driving_school_text_for_additional_info_if_gud">Желаем успехов!</string>
    <string name="driving_school_text_if_gud">Вы успешно сдали теоретическую часть экзамена.\nОтправляйтесь к практической части и проверьте знания на практике.</string>
    <string name="driving_school_text_if_not_gud">Вы не смогли сдать теоретическую часть экзамена.\nНе расстраивайтесь, в следующий раз у Вас всё получится!</string>
    <string name="driving_school_this_question">Вопрос №%1$s</string>
    <string name="driving_school_timer">%1$s : %2$s</string>
    <string name="driving_school_title_if_gud">Поздравляем!</string>
    <string name="driving_school_title_if_not_gud">К сожалению …</string>
    <string name="driving_school_value_answers">%1$d / %2$d</string>
    <string name="enterSum">Введите сумму</string>
    <string name="enterYourEmail">Введите ваш email</string>
    <string name="nik">Имя_Фамилия</string>
    <string name="players_list_header_dialog">Список игроков</string>
    <string name="players_list_header_first_column">ID</string>
    <string name="players_list_header_fourth_column">Пинг</string>
    <string name="players_list_header_second_column">Ник игрока</string>
    <string name="players_list_header_third_column">Уровень</string>
    <string name="players_list_search_hint">Поиск игрока</string>
</resources>