<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:theme="@style/MyTextViewTheme" android:background="@drawable/players_list_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:id="@+id/players_list_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginBottom="20dp" android:layout_marginStart="20dp" android:layout_marginEnd="20dp">
        <TextView android:textSize="16sp" android:textStyle="bold" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/players_list_header_dialog" android:layout_weight="4"/>
        <RelativeLayout android:layout_width="300dp" android:layout_height="30dp" android:layout_weight="2">
            <EditText android:textSize="13sp" android:id="@+id/search_view" android:background="@drawable/players_list_border_search" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/players_list_search_hint" android:imeOptions="flagNoExtractUi|flagNoFullscreen|actionSend" android:paddingStart="10dp"/>
            <ImageView android:id="@+id/icon_clear_search_text" android:visibility="invisible" android:layout_width="20dp" android:layout_height="15dp" android:layout_alignTop="@+id/search_view" android:layout_alignBottom="@+id/search_view" android:layout_marginEnd="10dp" android:layout_alignEnd="@+id/search_view" app:srcCompat="@drawable/menu_close"/>
            <ImageView android:id="@+id/icon_search_view" android:visibility="visible" android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/ic_search" android:layout_alignTop="@+id/search_view" android:layout_alignBottom="@+id/search_view" android:layout_marginEnd="10dp" android:layout_alignEnd="@+id/search_view"/>
        </RelativeLayout>
        <TextView android:textSize="16sp" android:textStyle="bold" android:gravity="center" android:id="@+id/players_list_value_players" android:background="@drawable/players_list_bg_value_players" android:layout_width="150dp" android:layout_height="30dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp"/>
        <Button android:layout_gravity="center" android:id="@+id/players_list_close" android:background="@drawable/menu_close" android:layout_width="25dp" android:layout_height="25dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/players_list_name_column" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/players_list_header" android:layout_marginStart="20dp" android:layout_marginEnd="50dp">
        <TextView android:textSize="13sp" android:textStyle="bold" android:layout_width="10dp" android:layout_height="wrap_content" android:text="@string/players_list_header_first_column" android:layout_weight="1" android:layout_marginStart="20dp"/>
        <TextView android:textSize="13sp" android:textStyle="bold" android:layout_width="45dp" android:layout_height="wrap_content" android:text="@string/players_list_header_second_column" android:layout_weight="5"/>
        <TextView android:textSize="13sp" android:textStyle="bold" android:layout_width="20dp" android:layout_height="wrap_content" android:text="@string/players_list_header_third_column" android:layout_weight="3"/>
        <TextView android:textSize="13sp" android:textStyle="bold" android:layout_width="20dp" android:layout_height="wrap_content" android:text="@string/players_list_header_fourth_column" android:layout_weight="2"/>
    </LinearLayout>
    <View android:background="@drawable/button_red_rectangle" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@+id/players_list_name_column" android:layout_marginStart="20dp" android:layout_marginEnd="50dp"/>
    <androidx.recyclerview.widget.RecyclerView android:scrollbarThumbVertical="@drawable/players_list_scroll_thumb" android:scrollbarTrackVertical="@drawable/players_list_scroll_track" android:id="@+id/players_list" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="10dp" android:layout_marginBottom="20dp" android:layout_below="@+id/players_list_name_column" android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>
</RelativeLayout>
